--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/material": "^20.2.3",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "date-fns": "^4.1.0",
     "ngx-mask": "^20.0.3",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
